Challengor base icon and color layout

--- a/composeApp/src/webMain/resources/index.html
+++ b/composeApp/src/webMain/resources/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LearningKMP</title>
+    <title>Challengor</title>
     <link type="text/css" rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon_io.png">
+    <link rel="manifest" href="favicon_io/site.webmanifest">
     <script type="application/javascript" src="composeApp.js"></script>
 </head>
 <body>
